# open-run

./: readme.md
ansible/: .ansible.cfg
ansible/inventory/: hosts.ini
ansible/playbooks/: apt.yml  create_user.yml  ddos-protect.yml  firewall.yml  kubernetes-cluster-setup.yml  qemu-guest-agent.yml  timezone.yml  zsh.yaml
ansible/playbooks/pre-requisites/: install-dependecies.yml
ansible/readme/: ddos-protect.md
app/: .dockerignore  .env  .gitignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/cron-jobs/: page.tsx  types.ts
app/src/app/docs/: page.tsx
app/src/components/: AuthWrapper.tsx  ErrorHandler.tsx  Loading.tsx  paginate.tsx
app/src/config/: docs.ts
app/src/lib/: cookies.ts  gradientText.ts
app/src/redux/: api-conf.ts  conf.ts  store.ts
app/src/types/: nav.ts
core/: .env  Cargo.toml
core/migrations/: 0001_users_table.sql  0002_cron_jobs_table.sql  003_cron_delete_job_run.sql
core/src/: config.rs  errors.rs  main.rs
core/src/app_utils/: jwt.rs
core/src/handlers/: auth_handler.rs  cron_job_handler.rs  file_handler.rs  mod.rs
core/src/middleware/: mod.rs
core/src/models/: auth.rs  cron_job.rs  file.rs  mod.rs
core/src/repository/: auth_repository.rs  cron_repository.rs  mod.rs
core/src/services/: cron_job_service.rs  file_service.rs  mod.rs
cron_templates/: backup.sh  example.yaml  network-config-backup.sh  system-health-check.sh
scripts/: .env  setup_kubernetes.sh  system_setup.sh  system_setup_test.sh
(+51 files in other folders)
