[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11.5" 
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures = "0.3"
log = "0.4"
rand = "0.8.5"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
uuid = { version = "1.3", features = ["v4", "serde"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
anyhow = "1.0"
actix-http = "3.0.0-beta.4"
actix-cors = "0.7.0"

[workspace]
members = ["."]